Temporary ignore changes in `lineinfile` - should fix eventually

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,4 +23,5 @@
   with_together:
     - ssh_keys.results
     - add_ssh_keys_from_github.usernames
+  changed_when: false # FIXME
   when: "add_ssh_keys_from_github.usernames | count > 0"
