I don't use pip and don't want to.
I don't need to install httplib2 neither (already taken care of).

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
-- name: install httplib2
-  sudo: true
-  pip: name=httplib2
+#- name: install httplib2
+  #sudo: true
+  #pip: name=httplib2
 
 - name: get SSH keys from GitHub
   uri: >
